NLP TP/texts/robotics/robotics.stackexchange_0000076726.txt
Q:

Catkin_make for publisher - Invoking "make -j4 -l4" failed

output of compilation:
    bharadwaj@bharadwaj-HP-Pavilion-g6-Notebook-PC:~/catkin_ws$ catkin_make
    Base path: /home/bharadwaj/catkin_ws
    Source space: /home/bharadwaj/catkin_ws/src
    Build space: /home/bharadwaj/catkin_ws/build
    Devel space: /home/bharadwaj/catkin_ws/devel
    Install space: /home/bharadwaj/catkin_ws/install
    ####
    #### Running command: "make cmake_check_build_system" in "/home/bharadwaj/catkin_ws/build"
    ####
    -- Using CATKIN_DEVEL_PREFIX: /home/bharadwaj/catkin_ws/devel
    -- Using CMAKE_PREFIX_PATH: /home/bharadwaj/catkin_ws/devel;/opt/ros/indigo
    -- This workspace overlays: /home/bharadwaj/catkin_ws/devel;/opt/ros/indigo
    -- Using PYTHON_EXECUTABLE: /usr/bin/python
    -- Using Debian Python package layout
    -- Using empy: /usr/bin/empy
    -- Using CATKIN_ENABLE_TESTING: ON
    -- Call enable_testing()
    -- Using CATKIN_TEST_RESULTS_DIR: /home/bharadwaj/catkin_ws/build/test_results
    -- Found gtest sources under '/usr/src/gtest': gtests will be built
    -- Using Python nosetests: /usr/bin/nosetests-2.7
    -- catkin 0.6.18
    -- BUILD_SHARED_LIBS is on
    -- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    -- ~~  traversing 7 packages in topological order:
    -- ~~  - gazebo_ros_pkgs (metapackage)
    -- ~~  - gazebo_msgs
    -- ~~  - beginner_tutorials
    -- ~~  - gazebo_ros
    -- ~~  - turtlbot
    -- ~~  - gazebo_plugins
    -- ~~  - gazebo_ros_control
    -- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    -- +++ processing catkin metapackage: 'gazebo_ros_pkgs'
    -- ==> add_subdirectory(gazebo_ros_pkgs/gazebo_ros_pkgs)
    -- +++ processing catkin package: 'gazebo_msgs'
    -- ==> add_subdirectory(gazebo_ros_pkgs/gazebo_msgs)
    -- Using these message generators: gencpp;genlisp;genpy
    -- gazebo_msgs: 9 messages, 20 services
    -- +++ processing catkin package: 'beginner_tutorials'
    -- ==> add_subdirectory(beginner_tutorials)
    -- +++ processing catkin package: 'gazebo_ros'
    -- ==> add_subdirectory(gazebo_ros_pkgs/gazebo_ros)
    -- Using these message generators: gencpp;genlisp;genpy
    -- Boost version: 1.54.0
    -- Boost version: 1.54.0
    -- Found the following Boost libraries:
    --   thread
    -- +++ processing catkin package: 'turtlbot'
    -- ==> add_subdirectory(turtlbot/srv)
    -- +++ processing catkin package: 'gazebo_plugins'
    -- ==> add_subdirectory(gazebo_ros_pkgs/gazebo_plugins)
    -- Using these message generators: gencpp;genlisp;genpy
    -- Boost version: 1.54.0
    -- Boost version: 1.54.0
    -- Found the following Boost libraries:
    --   thread
    -- +++ processing catkin package: 'gazebo_ros_control'
    -- ==> add_subdirectory(gazebo_ros_pkgs/gazebo_ros_control)
    -- Boost version: 1.54.0
    -- Configuring done
    -- Generating done
    -- Build files have been written to: /home/bharadwaj/catkin_ws/build
    ####
    #### Running command: "make -j4 -l4" in "/home/bharadwaj/catkin_ws/build"
    ####
    [  0%] Built target std_msgs_generate_messages_py
    [  0%] Built target geometry_msgs_generate_messages_py
    [  0%] Built target trajectory_msgs_generate_messages_py
    [  0%] Built target sensor_msgs_generate_messages_py
    [  0%] Built target _gazebo_msgs_generate_messages_check_deps_WorldState
    [  0%] [  0%] Built target _gazebo_msgs_generate_messages_check_deps_DeleteModel
    Built target _gazebo_msgs_generate_messages_check_deps_ContactsState
    [  0%] Built target _gazebo_msgs_generate_messages_check_deps_LinkStates
    [  0%] Built target _gazebo_msgs_generate_messages_check_deps_ApplyJointEffort
    [  0%] Built target _gazebo_msgs_generate_messages_check_deps_JointRequest
    [  0%] Built target _gazebo_msgs_generate_messages_check_deps_SetModelState
    [  0%] Built target _gazebo_msgs_generate_messages_check_deps_ModelStates
    [  0%] [  0%] Built target _gazebo_msgs_generate_messages_check_deps_GetModelState
    Built target _gazebo_msgs_generate_messages_check_deps_SetLinkState
    [  0%] Built target _gazebo_msgs_generate_messages_check_deps_ContactState
    [  0%] Built target _gazebo_msgs_generate_messages_check_deps_SetLinkProperties
    [  0%] [  0%] Built target _gazebo_msgs_generate_messages_check_deps_SetJointProperties
    Built target _gazebo_msgs_generate_messages_check_deps_SetJointTrajectory
    [  0%] Built target _gazebo_msgs_generate_messages_check_deps_BodyRequest
    [  0%] Built target _gazebo_msgs_generate_messages_check_deps_SpawnModel
    [  0%] Built target _gazebo_msgs_generate_messages_check_deps_GetModelProperties
    [  0%] Built target _gazebo_msgs_generate_messages_check_deps_ModelState
    [  0%] Built target _gazebo_msgs_generate_messages_check_deps_GetJointProperties
    [  0%] Built target _gazebo_msgs_generate_messages_check_deps_ODEPhysics
    [  0%] Built target _gazebo_msgs_generate_messages_check_deps_GetWorldProperties
    [  0%] Built target _gazebo_msgs_generate_messages_check_deps_SetModelConfiguration
    [  0%] Built target _gazebo_msgs_generate_messages_check_deps_ApplyBodyWrench
    [  0%] Built target _gazebo_msgs_generate_messages_check_deps_SetPhysicsProperties
    [  0%] Built target _gazebo_msgs_generate_messages_check_deps_GetLinkState
    [  0%] Built target _gazebo_msgs_generate_messages_check_deps_GetLinkProperties
    [  0%] [  0%] Built target _gazebo_msgs_generate_messages_check_deps_LinkState
    Built target _gazebo_msgs_generate_messages_check_deps_GetPhysicsProperties
    [  0%] Built target std_msgs_generate_messages_cpp
    [  0%] [  0%] Built target geometry_msgs_generate_messages_cpp
    Built target trajectory_msgs_generate_messages_cpp
    [  0%] [  0%] Built target sensor_msgs_generate_messages_cpp
    Built target _gazebo_msgs_generate_messages_check_deps_ODEJointProperties
    [  0%] [  0%] Built target sensor_msgs_generate_messages_lisp
    Built target std_msgs_generate_messages_lisp
    [  0%] Built target trajectory_msgs_generate_messages_lisp
    [  0%] Built target geometry_msgs_generate_messages_lisp
    [  1%] Building CXX object beginner_tutorials/CMakeFiles/talker.dir/src/talker.cpp.o
    [  1%] Built target std_srvs_generate_messages_cpp
    [  1%] Built target roscpp_generate_messages_lisp
    /home/bharadwaj/catkin_ws/src/beginner_tutorials/src/talker.cpp:1:6: error: stray ‘#’ in program
       27 #include "ros/ros.h"
          ^
    /home/bharadwaj/catkin_ws/src/beginner_tutorials/src/talker.cpp:2:6: error: stray ‘#’ in program
       28 #include "std_msgs/String.h"
          ^
    /home/bharadwaj/catkin_ws/src/beginner_tutorials/src/talker.cpp:4:6: error: stray ‘#’ in program
       30 #include <sstream>
          ^
    /home/bharadwaj/catkin_ws/src/beginner_tutorials/src/talker.cpp:1:3: error: expected unqualified-id before numeric constant
       27 #include "ros/ros.h"
       ^
    [  1%] [  1%] Built target roscpp_generate_messages_cpp
    Built target std_srvs_generate_messages_lisp
    make[2]: *** [beginner_tutorials/CMakeFiles/talker.dir/src/talker.cpp.o] Error 1
    make[1]: *** [beginner_tutorials/CMakeFiles/talker.dir/all] Error 2
    make[1]: *** Waiting for unfinished jobs....
    [  2%] Built target gazebo_ros_gencfg
    [  2%] [  2%] Built target rosgraph_msgs_generate_messages_py
    Built target std_srvs_generate_messages_py
    make: *** [all] Error 2
    Invoking "make -j4 -l4" failed
    bharadwaj@bharadwaj-HP-Pavilion-g6-Notebook-PC:~/catkin_ws$

Originally posted by manju on ROS Answers with karma: 13 on 2016-10-11
Post score: 0

A:

Next time, please try to provide at least a short explanation of what you do.
See the support guidelines
I guess your problem is that you copied in the line numbers form the example code. You can toggle showing them at the very top.

Originally posted by mgruhler with karma: 12390 on 2016-10-12
This answer was ACCEPTED on the original site
Post score: 1

